--- a/portfolio.html
+++ b/portfolio.html
@@ -98,7 +98,7 @@
                             <div class="box-gallery">
                                 <picture>
                                     <source srcset="./images/1box1x.jpg 1x, ./images/1box2x.jpg 2x" media="(min-width: 768px)">
-                                    <img class="box-gallery__images" src="../images/1box1x.jpg" alt="открытый ноутбук на каотором изображено 3 человека" width="350">
+                                    <img class="box-gallery__images" src="./images/1box1x.jpg" alt="открытый ноутбук на каотором изображено 3 человека" width="370">
                                 </picture>
                                 <div class="box-gallery__overlay">
                                     <p class="box-gallery__text">Технокряк это современная площадка распространения
@@ -117,7 +117,7 @@
                             <div class="box-gallery">
                                 <picture>
                                     <source srcset="./images/2box1x.jpg 1x, ./images/2box2x.jpg 2x" media="(min-width: 768px)">
-                                    <img class="box-gallery__images" src="../images/2box1x.jpg" alt="Постер New Orlean vs Golden Star" width="370">
+                                    <img class="box-gallery__images" src="./images/2box1x.jpg" alt="Постер New Orlean vs Golden Star" width="370">
                                 </picture>
                                 <div class="box-gallery__overlay">
                                     <p class="box-gallery__text">Технокряк это современная площадка распространения
@@ -136,7 +136,7 @@
                             <div class="box-gallery">
                                 <picture>
                                     <source srcset="./images/3box1x.jpg 1x, ./images/3box2x.jpg 2x" media="(min-width: 768px)">
-                                    <img class="box-gallery__images" src="../images/3box1x.jpg" alt="Ресторан Seafood" width="370">
+                                    <img class="box-gallery__images" src="./images/3box1x.jpg" alt="Ресторан Seafood" width="370">
                                 </picture>
                                 <div class="box-gallery__overlay">
                                     <p class="box-gallery__text">Технокряк это современная площадка распространения
@@ -156,7 +156,7 @@
                             <div class="box-gallery">
                                 <picture>
                                     <source srcset="./images/4box1x.jpg 1x, ./images/4box2x.jpg 2x" media="(min-width: 768px)">
-                                    <img class="box-gallery__images" src="../images/4box1x.jpg" alt="черные наушники большие" width="370">
+                                    <img class="box-gallery__images" src="./images/4box1x.jpg" alt="черные наушники большие" width="370">
                                 </picture>
                                 <div class="box-gallery__overlay">
                                     <p class="box-gallery__text">Технокряк это современная площадка распространения
@@ -176,7 +176,7 @@
                             <div class="box-gallery">
                                 <picture>
                                     <source srcset="./images/5box1x.jpg 1x, ./images/5box2x.jpg 2x" media="(min-width: 768px)">
-                                    <img class="box-gallery__images" src="../images/5box1x.jpg" alt="посылка box" width="370">
+                                    <img class="box-gallery__images" src="./images/5box1x.jpg" alt="посылка box" width="370">
                                 </picture>
                                 <div class="box-gallery__overlay">
                                     <p class="box-gallery__text">Технокряк это современная площадка распространения
@@ -196,7 +196,7 @@
                             <div class="box-gallery">
                                 <picture>
                                     <source srcset="./images/6box1x.jpg 1x, ./images/6box2x.jpg 2x" media="(min-width: 768px)">
-                                    <img class="box-gallery__images" src="../images/6box1x.jpg" alt="открыта страница на компьютере" width="370">
+                                    <img class="box-gallery__images" src="./images/6box1x.jpg" alt="открыта страница на компьютере" width="370">
                                 </picture>
                                 <div class="box-gallery__overlay">
                                     <p class="box-gallery__text">Технокряк это современная площадка распространения
@@ -216,7 +216,7 @@
                             <div class="box-gallery">
                                 <picture>
                                     <source srcset="./images/7box1x.jpg 1x, ./images/7box2x.jpg 2x" media="(min-width: 768px)">
-                                    <img class="box-gallery__images" src="../images/7box1x.jpg" alt="журнал в развороте" width="370">
+                                    <img class="box-gallery__images" src="./images/7box1x.jpg" alt="журнал в развороте" width="370">
                                 </picture>
                                 <div class="box-gallery__overlay">
                                     <p class="box-gallery__text">Технокряк это современная площадка распространения
@@ -236,7 +236,7 @@
                             <div class="box-gallery">
                                 <picture>
                                     <source srcset="./images/8box1x.jpg 1x, ./images/8box2x.jpg 2x" media="(min-width: 768px)">
-                                    <img class="box-gallery__images" src="../images/8box1x.jpg" alt="белая этикетка" width="370">
+                                    <img class="box-gallery__images" src="./images/8box1x.jpg" alt="белая этикетка" width="370">
                                 </picture>
                                 <div class="box-gallery__overlay">
                                     <p class="box-gallery__text">Технокряк это современная площадка распространения
@@ -256,7 +256,7 @@
                             <div class="box-gallery">
                                 <picture>
                                     <source srcset="./images/9box1x.jpg 1x, ./images/9box2x.jpg 2x" media="(min-width: 768px)">
-                                    <img class="box-gallery__images" src="../images/9box1x.jpg" alt="человек печатает на ноутбуке" width="370">
+                                    <img class="box-gallery__images" src="./images/9box1x.jpg" alt="человек печатает на ноутбуке" width="370">
                                 </picture>
                                 <div class="box-gallery__overlay">
                                     <p class="box-gallery__text">Технокряк это современная площадка распространения
