--- a/portfolio.html
+++ b/portfolio.html
@@ -117,7 +117,7 @@
                             <div class="box-gallery">
                                 <picture>
                                     <source srcset="./images/2box1x.jpg 1x, ./images/2box2x.jpg 2x" media="(min-width: 768px)">
-                                    <img class="box-gallery__images" src="./images/2box1x.jpg" alt="Постер New Orlean vs Golden Star" width="370">
+                                    <img class="img" src="./images/2box1x.jpg" alt="Постер New Orlean vs Golden Star" width="370">
                                 </picture>
                                 <div class="box-gallery__overlay">
                                     <p class="box-gallery__text">Технокряк это современная площадка распространения
