--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
                 <ul class="works">
                     <li class="works__item">
                         <picture>
-                            <source srcset="./images/box1x370.jpg 1x, ./images/box1x640.jpg 2x" media="(min-width: 1200px)">
-                            <img class="img" src="./images/box1x370.jpg" alt="ноутбук и чертежи" width="370">
+                            <source srcset="./images/box1@2x.jpg 1x, ./images/box1@2x.jpg 2x" media="(min-width: 1200px)">
+                            <img class="img" src="./images/box1@1x.jpg" alt="ноутбук и чертежи" width="370">
                         </picture>
                         <div class="works-box">
                             <h3 class="works__item">Десктопные приложения</h3>
@@ -193,8 +193,8 @@
                     </li>
                     <li class="works__item">
                         <picture>
-                            <source srcset="./images/box2x370.jpg 1x, ./images/box2x640.jpg 2x" media="(min-width: 1200px)">
-                            <img class="img" src="./images/box2x370.jpg" alt="женщина с телефоном в руках и ноутбук" width="370">
+                            <source srcset="./images/box2@1x.jpg 1x, ./images/box2@2x.jpg 2x" media="(min-width: 1200px)">
+                            <img class="img" src="./images/box2@1x.jpg" alt="женщина с телефоном в руках и ноутбук" width="370">
                         </picture>
                         <div class="works-box">
                             <h3 class="works__item">Мобильные приложения</h3>
@@ -202,8 +202,8 @@
                     </li>
                     <li class="works__item">
                         <picture>
-                            <source srcset="./images/box3x370.jpg 1x, ./images/box3x640.jpg 2x" media="(min-width: 1200px)">
-                            <img class="img" src="./images/box3x370.jpg" alt="в руках планшет" width="370">
+                            <source srcset="./images/box3@1x.jpg 1x, ./images/box3@2x.jpg 2x" media="(min-width: 1200px)">
+                            <img class="img" src="./images/box3@1x.jpg" alt="в руках планшет" width="370">
                         </picture>
                         <div class="works-box">
                             <h3 class="works__item">Дизайнерские решения</h3>
@@ -218,8 +218,10 @@
                 <ul class="team">
                     <li class="team__item">
                         <picture>
-                            <source srcset="./images/igor1x.jpg 1x, ./images/igor2x.jpg 2x" type="image/jpg" media="(min-width: 768px)">
-                            <img class="img" src="./images/igor1x.jpg" alt="мужчина в рубашке ,очках и с бородой" width="270">
+                             <source srcset="./images/igor@desktop1x.jpg 1x, ./images/igor@desktop2x.jpg 2x" type="image/jpg" media="(min-width: 1200px)">
+                             <source srcset="./images/igor@tablet1x.jpg 1x, ./images/igor@tablet2x.jpg 2x" type="image/jpg" media="(min-width: 768px)">
+                             <source srcset="./images/igor@mobil1x.jpg 1x, ./images/igor@mobil2x.jpg 2x" type="image/jpg" media="(max-width: 767px)">
+                             <img class="img" src="./images/igor@mobil1x.jpg" alt="мужчина в рубашке ,очках и с бородой" width="270">
                         </picture>
                         <div class="team__box">
                             <h3 class="team__title">Игорь Демьяненко</h3>
@@ -251,8 +253,10 @@
                     </li>
                     <li class="team__item">
                         <picture>
-                            <source srcset="./images/olga1x.jpg 1x, ./images/olga2x.jpg 2x" type="image/jpg" media="(min-width: 768px)">
-                            <img class="img" src="./images/olga1x.jpg" alt="женщина блондинка,в очках и в пиджаке" width="270">
+                             <source srcset="./images/olga@desktop1x.jpg 1x, ./images/olga@desktop2x.jpg 2x" type="image/jpg" media="(min-width: 1200px)">
+                             <source srcset="./images/olga@tablet1x.jpg 1x, ./images/olga@tablet2x.jpg 2x" type="image/jpg" media="(min-width: 768px)">
+                             <source srcset="./images/olga@mobil1x.jpg 1x, ./images/olga@mobil2x.jpg 2x" type="image/jpg" media="(max-width: 767px)">
+                             <img class="img" src="./images/olga@mobil1x.jpg" alt="женщина блондинка,в очках и в пиджаке" width="270">
                         </picture>
                         <div class="team__box">
                             <h3 class="team__title">Ольга Репина</h3>
@@ -283,8 +287,10 @@
                     </li>
                     <li class="team__item">
                         <picture>
-                            <source srcset="./images/nicolay1x.jpg 1x, ./images/nicolay2x.jpg 2x" type="image/jpg" media="(min-width: 768px)">
-                            <img class="img" src="./images/nicolay1x.jpg" alt="мужчина в голубой рубашке" width="270">
+                            <source srcset="./images/nicolay@desktop1x.jpg 1x, ./images/nicolay@desktop2x.jpg 2x" type="image/jpg" media="(min-width: 1200px)">
+                            <source srcset="./images/nicolay@tablet1x.jpg 1x, ./images/nicolay@tablet2x.jpg 2x" type="image/jpg" media="(min-width: 768px)">
+                            <source srcset="./images/nicolay@mobil1x.jpg 1x, ./images/nicolay@mobil2x.jpg 2x" type="image/jpg" media="(max-width: 767px)">
+                            <img class="img" src="./images/nicolay@mobil1x.jpg" alt="мужчина в голубой рубашке" width="270">
                         </picture>
                         <div class="team__box">
                             <h3 class="team__title">Николай Тарасов</h3>
@@ -315,10 +321,12 @@
                     </li>
                     <li class="team__item">
                         <picture>
-                            <source srcset="./images/michael1x.jpg 1x, ./images/michael2x.jpg 2x" type="image/jpg" media="(min-width: 768px)">
-                            <img class="img" src="./images/michael1x.jpg" alt="мужчина в черной футболке с бородой и очками" width="270">
+                            <source srcset="./images/michael@dekstop1x.jpg 1x, ./images/michael@dekstop2x.jpg 2x" type="image/jpg" media="(min-width: 1200px)">
+                            <source srcset="./images/michael@tablet1x.jpg 1x, ./images/michael@tablet2x.jpg 2x" type="image/jpg" media="(min-width: 768px)">
+                            <source srcset="./images/michael@mobil1x.jpg 1x, ./images/michael@mobil2x.jpg 2x" type="image/jpg" media="(max-width: 767px)">
+                            <img class="img" src="./images/michael@mobil1x.jpg" alt="мужчина в черной футболке с бородой и очками" width="270">
                         </picture>
-                        <div class="team__box">
+                        <div class="team__box">@tablet
                             <h3 class="team__title">Михаил Ермаков</h3>
                             <p class="team__text">UI Designer</p>
                             <ul class="social-icons">
