--- a/portfolio.html
+++ b/portfolio.html
@@ -249,7 +249,7 @@
                         <a href="" class="portfolio-list__link">
                             <div class="box-gallery">
                                 <picture>
-                                    <source srcset="./images/8box@desktop1x1x.jpg 1x, ./images/8box@desktop2x.jpg 2x" media="(min-width: 1200px)">
+                                    <source srcset="./images/8box@desktop1x.jpg 1x, ./images/8box@desktop2x.jpg 2x" media="(min-width: 1200px)">
                                     <source srcset="./images/8box@tablet1x.jpg 1x, ./images/8box@tablet2x.jpg 2x" media="(min-width: 768px)">
                                     <source srcset="./images/8box@mobil1x.jpg 1x, ./images/8box@mobil2x.jpg 2x" media="(max-width: 767px)">
                                     <img class="box-gallery__images" src="./images/8box@mobil1x.jpg" alt="белая этикетка" width="370">
