--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                             <source srcset="./images/michael@mobil1x.jpg 1x, ./images/michael@mobil2x.jpg 2x" type="image/jpg" media="(max-width: 767px)">
                             <img class="img" src="./images/michael@mobil1x.jpg" alt="мужчина в черной футболке с бородой и очками" width="270">
                         </picture>
-                        <div class="team__box">@tablet
+                        <div class="team__box">
                             <h3 class="team__title">Михаил Ермаков</h3>
                             <p class="team__text">UI Designer</p>
                             <ul class="social-icons">
